tried to make it a package

--- a/pytorch_forecasting_work.ipynb
+++ b/pytorch_forecasting_work.ipynb
@@ -23,7 +23,7 @@
     "from statsmodels.tsa.stattools import coint\n",
     "from binance.client import Client\n",
     "\n",
-    "from utils import get_closes, get_log_returns"
+    "from trading import utils"
    ]
   },
   {
@@ -50,192 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>price</th>\n",
-       "      <th>qty</th>\n",
-       "      <th>quoteQty</th>\n",
-       "      <th>time</th>\n",
-       "      <th>isBuyerMaker</th>\n",
-       "      <th>isBestMatch</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>210408725</td>\n",
-       "      <td>0.02785800</td>\n",
-       "      <td>2.49900000</td>\n",
-       "      <td>0.06961714</td>\n",
-       "      <td>2021-01-03 14:43:35.591</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>210408726</td>\n",
-       "      <td>0.02787000</td>\n",
-       "      <td>0.02900000</td>\n",
-       "      <td>0.00080823</td>\n",
-       "      <td>2021-01-03 14:43:35.796</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>210408727</td>\n",
-       "      <td>0.02786300</td>\n",
-       "      <td>0.75000000</td>\n",
-       "      <td>0.02089725</td>\n",
-       "      <td>2021-01-03 14:43:35.873</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>210408728</td>\n",
-       "      <td>0.02786300</td>\n",
-       "      <td>0.02200000</td>\n",
-       "      <td>0.00061298</td>\n",
-       "      <td>2021-01-03 14:43:35.992</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>210408729</td>\n",
-       "      <td>0.02786000</td>\n",
-       "      <td>0.56200000</td>\n",
-       "      <td>0.01565732</td>\n",
-       "      <td>2021-01-03 14:43:36.030</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>210409220</td>\n",
-       "      <td>0.02789200</td>\n",
-       "      <td>0.10700000</td>\n",
-       "      <td>0.00298444</td>\n",
-       "      <td>2021-01-03 14:45:15.914</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>210409221</td>\n",
-       "      <td>0.02789200</td>\n",
-       "      <td>0.19900000</td>\n",
-       "      <td>0.00555050</td>\n",
-       "      <td>2021-01-03 14:45:15.914</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>210409222</td>\n",
-       "      <td>0.02789400</td>\n",
-       "      <td>0.15600000</td>\n",
-       "      <td>0.00435146</td>\n",
-       "      <td>2021-01-03 14:45:16.059</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>498</th>\n",
-       "      <td>210409223</td>\n",
-       "      <td>0.02789500</td>\n",
-       "      <td>0.15600000</td>\n",
-       "      <td>0.00435162</td>\n",
-       "      <td>2021-01-03 14:45:16.375</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>210409224</td>\n",
-       "      <td>0.02789500</td>\n",
-       "      <td>7.00000000</td>\n",
-       "      <td>0.19526500</td>\n",
-       "      <td>2021-01-03 14:45:16.575</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>500 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id       price         qty    quoteQty                    time  \\\n",
-       "0    210408725  0.02785800  2.49900000  0.06961714 2021-01-03 14:43:35.591   \n",
-       "1    210408726  0.02787000  0.02900000  0.00080823 2021-01-03 14:43:35.796   \n",
-       "2    210408727  0.02786300  0.75000000  0.02089725 2021-01-03 14:43:35.873   \n",
-       "3    210408728  0.02786300  0.02200000  0.00061298 2021-01-03 14:43:35.992   \n",
-       "4    210408729  0.02786000  0.56200000  0.01565732 2021-01-03 14:43:36.030   \n",
-       "..         ...         ...         ...         ...                     ...   \n",
-       "495  210409220  0.02789200  0.10700000  0.00298444 2021-01-03 14:45:15.914   \n",
-       "496  210409221  0.02789200  0.19900000  0.00555050 2021-01-03 14:45:15.914   \n",
-       "497  210409222  0.02789400  0.15600000  0.00435146 2021-01-03 14:45:16.059   \n",
-       "498  210409223  0.02789500  0.15600000  0.00435162 2021-01-03 14:45:16.375   \n",
-       "499  210409224  0.02789500  7.00000000  0.19526500 2021-01-03 14:45:16.575   \n",
-       "\n",
-       "     isBuyerMaker  isBestMatch  \n",
-       "0            True         True  \n",
-       "1           False         True  \n",
-       "2           False         True  \n",
-       "3           False         True  \n",
-       "4           False         True  \n",
-       "..            ...          ...  \n",
-       "495          True         True  \n",
-       "496          True         True  \n",
-       "497         False         True  \n",
-       "498         False         True  \n",
-       "499         False         True  \n",
-       "\n",
-       "[500 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'eth_sym' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-b523f7a6724c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_stream_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meth_sym\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'eth_sym' is not defined"
+     ]
     }
    ],
    "source": [
-    "trades"
+    "get_stream_str(eth_sym)"
    ]
   },
   {
