got listener working

--- a/binance_work.ipynb
+++ b/binance_work.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,9 @@
     "\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
+    "from binance.client import Client\n",
     "\n",
-    "from binance.client import Client"
+    "from trading.websockets.binance import listener"
    ]
   },
   {
@@ -34,11 +35,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mytrading"
+    "API_PUBLIC = os.environ.get(\"B_PUBLIC_KEY\")\n",
+    "API_SECRET = os.environ.get(\"B_SECRET_KEY\")\n",
+    "binance_client = Client(API_PUBLIC, API_SECRET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = binance_client.get_exchange_info()\n",
+    "symbols = [s[\"symbol\"] for s in info[\"symbols\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbols = [\"ADABTC\", \"LINKBTC\", \"ETHBTC\", \"BNBBTC\"]\n",
+    "db_name = \"trading_data\"\n",
+    "l = listener.Listener(binance_client, symbols[3], db_name)\n",
+    "# listeners = [\n",
+    "#     listener.Listener(binance_client, symbol, db_name)\n",
+    "#     for symbol in symbols\n",
+    "# ]\n",
+    "# for l in listeners:\n",
+    "#     l.make_websocket()\n",
+    "#     l.start_stream()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.make_websocket()\n",
+    "l.start_stream()"
    ]
   },
   {
@@ -47,9 +88,174 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_PUBLIC = os.environ.get(\"B_PUBLIC_KEY\")\n",
-    "API_SECRET = os.environ.get(\"B_SECRET_KEY\")\n",
-    "binance_client = Client(API_PUBLIC, API_SECRET)"
+    "l.close_socket()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trading.database.data_point import DataPoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mongoengine.connection import _get_db\n",
+    "db = _get_db()\n",
+    "db.drop_collection(\"datapoints\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DataPoint.objects.filter(event_type=\"trade\")[0]._data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DepthCacheManager?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcm = DepthCacheManager(binance_client, eth_sym, callback=lambda msg: None, bm=l.bm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= {\n",
+    "    'stream': 'ethbtc@depth10@1000ms', \n",
+    "    'data': {\n",
+    "        'lastUpdateId': 2097409972, \n",
+    "        'bids': [\n",
+    "            ['0.03275700', '0.57100000'], \n",
+    "            ['0.03275600', '2.50400000'], \n",
+    "            ['0.03275400', '0.21300000'], \n",
+    "            ['0.03275300', '0.52500000'], \n",
+    "            ['0.03275200', '2.50000000'], \n",
+    "            ['0.03275100', '1.00000000'], \n",
+    "            ['0.03275000', '5.62200000'], \n",
+    "            ['0.03274600', '4.60000000'], \n",
+    "            ['0.03274500', '1.07800000'], \n",
+    "            ['0.03274300', '1.59200000']\n",
+    "        ],\n",
+    "        'asks': [\n",
+    "            ['0.03275800', '26.27500000'], \n",
+    "            ['0.03276100', '6.42900000'], \n",
+    "            ['0.03276200', '31.36000000'], \n",
+    "            ['0.03276300', '55.30000000'], \n",
+    "            ['0.03276400', '0.16800000'], \n",
+    "            ['0.03276600', '4.10000000'], \n",
+    "            ['0.03276700', '37.40500000'], \n",
+    "            ['0.03276800', '3.05200000'], \n",
+    "            ['0.03277600', '0.29800000'], \n",
+    "            ['0.03277700', '3.35200000']\n",
+    "        ]\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trading.websockets.binance import utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.process_trade_message(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "  \"e\": \"trade\",     # Event type\n",
+    "  \"E\": 123456789,   # Event time\n",
+    "  \"s\": \"BNBBTC\",    # Symbol\n",
+    "  \"t\": 12345,       # Trade ID\n",
+    "  \"p\": \"0.001\",     # Price\n",
+    "  \"q\": \"100\",       # Quantity\n",
+    "  \"b\": 88,          # Buyer order ID\n",
+    "  \"a\": 50,          # Seller order ID\n",
+    "  \"T\": 123456785,   # Trade time\n",
+    "  \"m\": true,        # Is the buyer the market maker?\n",
+    "  \"M\": true         # Ignore\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.start_stream()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.close_stream()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.conn_key"
    ]
   },
   {
@@ -81,12 +287,14 @@
     "    bm = BinanceSocketManager(client)\n",
     "    \n",
     "def get_depth_stream_str(symbol, depth=20, update_interval=\"100ms\"):\n",
-    "    return f\"{symbol.lower()}@depth@{depth}@{update_interval}\"\n",
+    "    return f\"{symbol.lower()}@depth{depth}@{update_interval}\"\n",
+    "\n",
+    "def get_trade_stream_str(symbol):\n",
+    "    return f\"{symbol.lower()}@trade\"\n",
     "\n",
     "def process_message(msg):\n",
-    "    print(f\"message type: {msg['e']}\")\n",
     "    print(msg)\n",
-    "    \n",
+    "\n",
     "def process_depth_cache(depth_cache):\n",
     "    print(\"symbol {}\".format(depth_cache.symbol))\n",
     "    print(\"top 5 bids\")\n",
@@ -101,31 +309,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "eth_sym = \"ETHBTC\"\n",
-    "stream_str = get_depth_stream_str(eth_sym)\n",
+    "trade_stream_str = get_trade_stream_str(eth_sym)\n",
+    "lob_stream_str = get_depth_stream_str(eth_sym)\n",
     "bm = BinanceSocketManager(binance_client)\n",
-    "conn_key = bm.start_multiplex_socket([stream_str], process_message)\n",
+    "streams = [trade_stream_str, lob_stream_str]\n",
+    "conn_key = bm.start_multiplex_socket(streams[1:], process_message)\n",
     "conn_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from binance.depthcache import DepthCacheManager\n",
-    "dcm1 = DepthCacheManager(binance_client, 'BNBBTC', callback=process_depth_cache, bm=bm, refresh_interval=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dcm1.close(close_socket=True)"
    ]
   },
   {
