binance environment working and snapshotter running on it

--- a/trading_env_work.ipynb
+++ b/trading_env_work.ipynb
@@ -23,10 +23,7 @@
    "source": [
     "import datetime as dt\n",
     "import os\n",
-    "import dateparser\n",
-    "from binance.client import Client\n",
-    "from binance.websockets import BinanceSocketManager\n",
-    "from binance.depthcache import DepthCacheManager"
+    "import dateparser"
    ]
   },
   {
@@ -35,119 +32,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trading.websockets.binance.env import Env as BinanceEnv"
+    "from trading.database.utils import connect_to_db\n",
+    "from trading.database.data_point import DataPoint\n",
+    "from trading.websockets.binance.env import Env as BinanceEnv\n",
+    "from trading.websockets.snapshotter import Snapshotter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB_NAME = \"trading_data\"\n",
+    "db = connect_to_db(DB_NAME)\n",
+    "DataPoint.objects.delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tickers = [\"BNBBTC\"]\n",
     "streams = [\"trade\"]\n",
-    "binance_env = BinanceEnv(tickers, streams)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binance_env.close_socket()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binance_env.start_stream()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'guid': '5fa9b126535b4b8b8b5355be0e0b9796',\n",
-       " 'trade_id': 100386744,\n",
-       " 'price': 0.0012379,\n",
-       " 'quantity': 4.27,\n",
-       " 'buy_order_id': 674656777,\n",
-       " 'sell_order_id': 674656766,\n",
-       " 'trade_time': 1610904437539,\n",
-       " 'is_limit_buy': False}"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binance_env.data[\"bnbbtc\"][\"trades\"][0]._data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.97"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binance_env.data[\"bnbbtc\"][\"orderbook\"].asks[0].quantity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ti = time.time()"
+    "binance_env = BinanceEnv(tickers, streams, max_trade_history=10)\n",
+    "snapshotter = Snapshotter(binance_env, snap_every=15, max_mongo_cache=10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "started stream for env: binance_us\n",
+      "snapshotter started for env: binance_us\n"
+     ]
+    }
+   ],
    "source": [
-    "dateparser.parse(str(ti))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binance_env.orderbooks[\"BNBBTC\"].get_bids()"
+    "binance_env.start_stream()\n",
+    "snapshotter.start()"
    ]
   },
   {
@@ -158,13 +99,6 @@
    "source": [
     "binance_env.close_socket()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
