adjusted listener script

--- a/trading_env_work.ipynb
+++ b/trading_env_work.ipynb
@@ -69,26 +69,17 @@
     "tickers = [\"BNBBTC\"]\n",
     "streams = [\"trade\"]\n",
     "binance_env = BinanceEnv(tickers, streams, max_trade_history=10)\n",
-    "snapshotter = Snapshotter(binance_env, snap_every=15, max_mongo_cache=10)"
+    "snapshotter = Snapshotter(binance_env, snap_every=15, max_mongo_cache=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "started stream for env: binance_us\n",
-      "snapshotter started for env: binance_us\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "binance_env.start_stream()\n",
-    "snapshotter.start()"
+    "snapshotter.start(print_saves=True)"
    ]
   },
   {
@@ -99,6 +90,13 @@
    "source": [
     "binance_env.close_socket()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
